--- a/scraper/python-scraper/requirements.txt
+++ b/scraper/python-scraper/requirements.txt
@@ -3,3 +3,8 @@ uvicorn==0.29.0
 pydantic==1.10.13
 trafilatura==1.8.0
 lxml_html_clean
+beautifulsoup4==4.12.3
+requests==2.31.0
+pdfminer.six
+Flask==2.3.3
+gunicorn==21.2.0
